<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_padding">

    <LinearLayout
        style="@style/button_bar_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/my_music_button"
            style="@style/button_style"
            android:text="@string/my_music_button" />

        <Button
            android:id="@+id/search_button"
            style="@style/button_style"
            android:text="@string/search_button" />
    </LinearLayout>


    <Button
        android:id="@+id/now_playing_button"
        style="@style/now_playing_button_style"
        android:text="@string/now_playing_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/new_releases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_releases"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/featured_playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featured_playlists"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/new_releases" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/featured_playlists"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/browse_activity_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/categories" />
</android.support.constraint.ConstraintLayout>