<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_padding">

    <LinearLayout
        android:id="@+id/top_button_bar_linearLayout"
        style="@style/button_bar_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/browse_button"
            style="@style/button_style"
            android:text="@string/browse_button" />

        <Button
            android:id="@+id/search_button"
            style="@style/button_style"
            android:text="@string/search_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/song1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_song"
        android:drawablePadding="@dimen/fab_margin"
        android:drawableStart="@drawable/ic_song"
        android:gravity="center_vertical"
        android:text="@string/song1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_button_bar_linearLayout"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/song2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_song"
        android:drawablePadding="@dimen/fab_margin"
        android:drawableStart="@drawable/ic_song"
        android:gravity="center_vertical"
        android:text="@string/song2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song1" />

    <TextView
        android:id="@+id/my_music_activity_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_music_activity_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song2" />

    <Button
        android:id="@+id/now_playing_button"
        style="@style/now_playing_button_style"
        android:text="@string/now_playing_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>