<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_padding">

    <LinearLayout
        style="@style/button_bar_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/browse_button"
            style="@style/button_style"
            android:text="@string/browse_button" />

        <Button
            android:id="@+id/search_button"
            style="@style/button_style"
            android:text="@string/search_button" />

        <Button
            android:id="@+id/my_music_button"
            style="@style/button_style"
            android:text="@string/my_music_button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>